Sources/StatLanguage/Lang/Autogen/StatParser.swift
// Generated from Stat.g4 by ANTLR 4.10.1
import Antlr4

open class StatParser: Parser {

	internal static var _decisionToDFA: [DFA] = {
          var decisionToDFA = [DFA]()
          let length = StatParser._ATN.getNumberOfDecisions()
          for i in 0..<length {
            decisionToDFA.append(DFA(StatParser._ATN.getDecisionState(i)!, i))
           }
           return decisionToDFA
     }()

	internal static let _sharedContextCache = PredictionContextCache()

	public
	enum Tokens: Int {
		case EOF = -1, LPAR = 1, RPAR = 2, LBRACES = 3, RBRACES = 4, COMMA = 5, 
                 CONST = 6, SEMICOLON = 7, DOT = 8, COLON = 9, RETURN = 10, 
                 PLUS = 11, MINUS = 12, TIMES = 13, DIVIDE = 14, MODULO = 15, 
                 AFFECT = 16, EQUAL = 17, DIFF = 18, LT = 19, GT = 20, LTOE = 21, 
                 GTOE = 22, NOT = 23, TRUE = 24, FALSE = 25, AND = 26, OR = 27, 
                 BOOLEANTYPE = 28, NUMBERTYPE = 29, DEVICETYPE = 30, IF = 31, 
                 ELSE = 32, ID = 33, NUMBER = 34, COMMENT = 35, WS = 36
	}

	public
	static let RULE_program = 0, RULE_varDecl = 1, RULE_funcDecl = 2, RULE_type = 3, 
            RULE_parameters = 4, RULE_varDef = 5, RULE_block = 6, RULE_statement = 7, 
            RULE_exprD = 8, RULE_exprG = 9

	public
	static let ruleNames: [String] = [
		"program", "varDecl", "funcDecl", "type", "parameters", "varDef", "block", 
		"statement", "exprD", "exprG"
	]

	private static let _LITERAL_NAMES: [String?] = [
		nil, "'('", "')'", "'{'", "'}'", "','", "'const'", "';'", "'.'", "':'", 
		"'return'", "'+'", "'-'", "'*'", "'/'", "'%'", "'='", "'=='", "'!='", 
		"'<'", "'>'", "'<='", "'>='", "'!'", "'true'", "'false'", "'&&'", "'||'", 
		"'bool'", "'number'", "'device'", "'if'", "'else'"
	]
	private static let _SYMBOLIC_NAMES: [String?] = [
		nil, "LPAR", "RPAR", "LBRACES", "RBRACES", "COMMA", "CONST", "SEMICOLON", 
		"DOT", "COLON", "RETURN", "PLUS", "MINUS", "TIMES", "DIVIDE", "MODULO", 
		"AFFECT", "EQUAL", "DIFF", "LT", "GT", "LTOE", "GTOE", "NOT", "TRUE", 
		"FALSE", "AND", "OR", "BOOLEANTYPE", "NUMBERTYPE", "DEVICETYPE", "IF", 
		"ELSE", "ID", "NUMBER", "COMMENT", "WS"
	]
	public
	static let VOCABULARY = Vocabulary(_LITERAL_NAMES, _SYMBOLIC_NAMES)

	override open
	func getGrammarFileName() -> String { return "Stat.g4" }

	override open
	func getRuleNames() -> [String] { return StatParser.ruleNames }

	override open
	func getSerializedATN() -> [Int] { return StatParser._serializedATN }

	override open
	func getATN() -> ATN { return StatParser._ATN }


	override open
	func getVocabulary() -> Vocabulary {
	    return StatParser.VOCABULARY
	}

	override public
	init(_ input:TokenStream) throws {
	    RuntimeMetaData.checkVersion("4.10.1", RuntimeMetaData.VERSION)
		try super.init(input)
		_interp = ParserATNSimulator(self,StatParser._ATN,StatParser._decisionToDFA, StatParser._sharedContextCache)
	}


	public class ProgramContext: ParserRuleContext {
			open
			func EOF() -> TerminalNode? {
				return getToken(StatParser.Tokens.EOF.rawValue, 0)
			}
			open
			func varDecl() -> [VarDeclContext] {
				return getRuleContexts(VarDeclContext.self)
			}
			open
			func varDecl(_ i: Int) -> VarDeclContext? {
				return getRuleContext(VarDeclContext.self, i)
			}
			open
			func funcDecl() -> [FuncDeclContext] {
				return getRuleContexts(FuncDeclContext.self)
			}
			open
			func funcDecl(_ i: Int) -> FuncDeclContext? {
				return getRuleContext(FuncDeclContext.self, i)
			}
		override open
		func getRuleIndex() -> Int {
			return StatParser.RULE_program
		}
		override open
		func accept<T>(_ visitor: ParseTreeVisitor<T>) -> T? {
			if let visitor = visitor as? StatVisitor {
			    return visitor.visitProgram(self)
			}
			else if let visitor = visitor as? StatBaseVisitor {
			    return visitor.visitProgram(self)
			}
			else {
			     return visitor.visitChildren(self)
			}
		}
	}
	@discardableResult
	 open func program() throws -> ProgramContext {
		var _localctx: ProgramContext
		_localctx = ProgramContext(_ctx, getState())
		try enterRule(_localctx, 0, StatParser.RULE_program)
		var _la: Int = 0
		defer {
	    		try! exitRule()
	    }
		do {
		 	try enterOuterAlt(_localctx, 1)
		 	setState(23)
		 	try _errHandler.sync(self)
		 	_la = try _input.LA(1)
		 	while (//closure
		 	 { () -> Bool in
		 	      let testSet: Bool = {  () -> Bool in
		 	   let testArray: [Int] = [_la, StatParser.Tokens.CONST.rawValue,StatParser.Tokens.BOOLEANTYPE.rawValue,StatParser.Tokens.NUMBERTYPE.rawValue,StatParser.Tokens.DEVICETYPE.rawValue]
		 	    return  Utils.testBitLeftShiftArray(testArray, 0)
		 	}()
		 	      return testSet
		 	 }()) {
		 		setState(20)
		 		try varDecl()


		 		setState(25)
		 		try _errHandler.sync(self)
		 		_la = try _input.LA(1)
		 	}
		 	setState(27) 
		 	try _errHandler.sync(self)
		 	_la = try _input.LA(1)
		 	repeat {
		 		setState(26)
		 		try funcDecl()


		 		setState(29); 
		 		try _errHandler.sync(self)
		 		_la = try _input.LA(1)
		 	} while (//closure
		 	 { () -> Bool in
		 	      let testSet: Bool = _la == StatParser.Tokens.ID.rawValue
		 	      return testSet
		 	 }())
		 	setState(31)
		 	try match(StatParser.Tokens.EOF.rawValue)

		}
		catch ANTLRException.recognition(let re) {
			_localctx.exception = re
			_errHandler.reportError(self, re)
			try _errHandler.recover(self, re)
		}

		return _localctx
	}

	public class VarDeclContext: ParserRuleContext {
			open
			func varDef() -> VarDefContext? {
				return getRuleContext(VarDefContext.self, 0)
			}
			open
			func SEMICOLON() -> TerminalNode? {
				return getToken(StatParser.Tokens.SEMICOLON.rawValue, 0)
			}
			open
			func CONST() -> TerminalNode? {
				return getToken(StatParser.Tokens.CONST.rawValue, 0)
			}
			open
			func AFFECT() -> TerminalNode? {
				return getToken(StatParser.Tokens.AFFECT.rawValue, 0)
			}
			open
			func exprD() -> ExprDContext? {
				return getRuleContext(ExprDContext.self, 0)
			}
		override open
		func getRuleIndex() -> Int {
			return StatParser.RULE_varDecl
		}
		override open
		func accept<T>(_ visitor: ParseTreeVisitor<T>) -> T? {
			if let visitor = visitor as? StatVisitor {
			    return visitor.visitVarDecl(self)
			}
			else if let visitor = visitor as? StatBaseVisitor {
			    return visitor.visitVarDecl(self)
			}
			else {
			     return visitor.visitChildren(self)
			}
		}
	}
	@discardableResult
	 open func varDecl() throws -> VarDeclContext {
		var _localctx: VarDeclContext
		_localctx = VarDeclContext(_ctx, getState())
		try enterRule(_localctx, 2, StatParser.RULE_varDecl)
		var _la: Int = 0
		defer {
	    		try! exitRule()
	    }
		do {
		 	try enterOuterAlt(_localctx, 1)
		 	setState(34)
		 	try _errHandler.sync(self)
		 	_la = try _input.LA(1)
		 	if (//closure
		 	 { () -> Bool in
		 	      let testSet: Bool = _la == StatParser.Tokens.CONST.rawValue
		 	      return testSet
		 	 }()) {
		 		setState(33)
		 		try match(StatParser.Tokens.CONST.rawValue)

		 	}

		 	setState(36)
		 	try varDef()
		 	setState(39)
		 	try _errHandler.sync(self)
		 	_la = try _input.LA(1)
		 	if (//closure
		 	 { () -> Bool in
		 	      let testSet: Bool = _la == StatParser.Tokens.AFFECT.rawValue
		 	      return testSet
		 	 }()) {
		 		setState(37)
		 		try match(StatParser.Tokens.AFFECT.rawValue)
		 		setState(38)
		 		try exprD(0)

		 	}

		 	setState(41)
		 	try match(StatParser.Tokens.SEMICOLON.rawValue)

		}
		catch ANTLRException.recognition(let re) {
			_localctx.exception = re
			_errHandler.reportError(self, re)
			try _errHandler.recover(self, re)
		}

		return _localctx
	}

	public class FuncDeclContext: ParserRuleContext {
			open
			func ID() -> TerminalNode? {
				return getToken(StatParser.Tokens.ID.rawValue, 0)
			}
			open
			func LPAR() -> TerminalNode? {
				return getToken(StatParser.Tokens.LPAR.rawValue, 0)
			}
			open
			func RPAR() -> TerminalNode? {
				return getToken(StatParser.Tokens.RPAR.rawValue, 0)
			}
			open
			func block() -> BlockContext? {
				return getRuleContext(BlockContext.self, 0)
			}
			open
			func parameters() -> ParametersContext? {
				return getRuleContext(ParametersContext.self, 0)
			}
			open
			func COLON() -> TerminalNode? {
				return getToken(StatParser.Tokens.COLON.rawValue, 0)
			}
			open
			func type() -> TypeContext? {
				return getRuleContext(TypeContext.self, 0)
			}
		override open
		func getRuleIndex() -> Int {
			return StatParser.RULE_funcDecl
		}
		override open
		func accept<T>(_ visitor: ParseTreeVisitor<T>) -> T? {
			if let visitor = visitor as? StatVisitor {
			    return visitor.visitFuncDecl(self)
			}
			else if let visitor = visitor as? StatBaseVisitor {
			    return visitor.visitFuncDecl(self)
			}
			else {
			     return visitor.visitChildren(self)
			}
		}
	}
	@discardableResult
	 open func funcDecl() throws -> FuncDeclContext {
		var _localctx: FuncDeclContext
		_localctx = FuncDeclContext(_ctx, getState())
		try enterRule(_localctx, 4, StatParser.RULE_funcDecl)
		var _la: Int = 0
		defer {
	    		try! exitRule()
	    }
		do {
		 	try enterOuterAlt(_localctx, 1)
		 	setState(43)
		 	try match(StatParser.Tokens.ID.rawValue)
		 	setState(44)
		 	try match(StatParser.Tokens.LPAR.rawValue)
		 	setState(46)
		 	try _errHandler.sync(self)
		 	_la = try _input.LA(1)
		 	if (//closure
		 	 { () -> Bool in
		 	      let testSet: Bool = {  () -> Bool in
		 	   let testArray: [Int] = [_la, StatParser.Tokens.BOOLEANTYPE.rawValue,StatParser.Tokens.NUMBERTYPE.rawValue,StatParser.Tokens.DEVICETYPE.rawValue]
		 	    return  Utils.testBitLeftShiftArray(testArray, 0)
		 	}()
		 	      return testSet
		 	 }()) {
		 		setState(45)
		 		try parameters()

		 	}

		 	setState(48)
		 	try match(StatParser.Tokens.RPAR.rawValue)
		 	setState(51)
		 	try _errHandler.sync(self)
		 	_la = try _input.LA(1)
		 	if (//closure
		 	 { () -> Bool in
		 	      let testSet: Bool = _la == StatParser.Tokens.COLON.rawValue
		 	      return testSet
		 	 }()) {
		 		setState(49)
		 		try match(StatParser.Tokens.COLON.rawValue)
		 		setState(50)
		 		try type()

		 	}

		 	setState(53)
		 	try block()

		}
		catch ANTLRException.recognition(let re) {
			_localctx.exception = re
			_errHandler.reportError(self, re)
			try _errHandler.recover(self, re)
		}

		return _localctx
	}

	public class TypeContext: ParserRuleContext {
			open
			func BOOLEANTYPE() -> TerminalNode? {
				return getToken(StatParser.Tokens.BOOLEANTYPE.rawValue, 0)
			}
			open
			func NUMBERTYPE() -> TerminalNode? {
				return getToken(StatParser.Tokens.NUMBERTYPE.rawValue, 0)
			}
			open
			func DEVICETYPE() -> TerminalNode? {
				return getToken(StatParser.Tokens.DEVICETYPE.rawValue, 0)
			}
		override open
		func getRuleIndex() -> Int {
			return StatParser.RULE_type
		}
		override open
		func accept<T>(_ visitor: ParseTreeVisitor<T>) -> T? {
			if let visitor = visitor as? StatVisitor {
			    return visitor.visitType(self)
			}
			else if let visitor = visitor as? StatBaseVisitor {
			    return visitor.visitType(self)
			}
			else {
			     return visitor.visitChildren(self)
			}
		}
	}
	@discardableResult
	 open func type() throws -> TypeContext {
		var _localctx: TypeContext
		_localctx = TypeContext(_ctx, getState())
		try enterRule(_localctx, 6, StatParser.RULE_type)
		var _la: Int = 0
		defer {
	    		try! exitRule()
	    }
		do {
		 	try enterOuterAlt(_localctx, 1)
		 	setState(55)
		 	_la = try _input.LA(1)
		 	if (!(//closure
		 	 { () -> Bool in
		 	      let testSet: Bool = {  () -> Bool in
		 	   let testArray: [Int] = [_la, StatParser.Tokens.BOOLEANTYPE.rawValue,StatParser.Tokens.NUMBERTYPE.rawValue,StatParser.Tokens.DEVICETYPE.rawValue]
		 	    return  Utils.testBitLeftShiftArray(testArray, 0)
		 	}()
		 	      return testSet
		 	 }())) {
		 	try _errHandler.recoverInline(self)
		 	}
		 	else {
		 		_errHandler.reportMatch(self)
		 		try consume()
		 	}

		}
		catch ANTLRException.recognition(let re) {
			_localctx.exception = re
			_errHandler.reportError(self, re)
			try _errHandler.recover(self, re)
		}

		return _localctx
	}

	public class ParametersContext: ParserRuleContext {
			open
			func varDef() -> [VarDefContext] {
				return getRuleContexts(VarDefContext.self)
			}
			open
			func varDef(_ i: Int) -> VarDefContext? {
				return getRuleContext(VarDefContext.self, i)
			}
			open
			func COMMA() -> [TerminalNode] {
				return getTokens(StatParser.Tokens.COMMA.rawValue)
			}
			open
			func COMMA(_ i:Int) -> TerminalNode? {
				return getToken(StatParser.Tokens.COMMA.rawValue, i)
			}
		override open
		func getRuleIndex() -> Int {
			return StatParser.RULE_parameters
		}
		override open
		func accept<T>(_ visitor: ParseTreeVisitor<T>) -> T? {
			if let visitor = visitor as? StatVisitor {
			    return visitor.visitParameters(self)
			}
			else if let visitor = visitor as? StatBaseVisitor {
			    return visitor.visitParameters(self)
			}
			else {
			     return visitor.visitChildren(self)
			}
		}
	}
	@discardableResult
	 open func parameters() throws -> ParametersContext {
		var _localctx: ParametersContext
		_localctx = ParametersContext(_ctx, getState())
		try enterRule(_localctx, 8, StatParser.RULE_parameters)
		var _la: Int = 0
		defer {
	    		try! exitRule()
	    }
		do {
		 	try enterOuterAlt(_localctx, 1)
		 	setState(57)
		 	try varDef()
		 	setState(62)
		 	try _errHandler.sync(self)
		 	_la = try _input.LA(1)
		 	while (//closure
		 	 { () -> Bool in
		 	      let testSet: Bool = _la == StatParser.Tokens.COMMA.rawValue
		 	      return testSet
		 	 }()) {
		 		setState(58)
		 		try match(StatParser.Tokens.COMMA.rawValue)
		 		setState(59)
		 		try varDef()


		 		setState(64)
		 		try _errHandler.sync(self)
		 		_la = try _input.LA(1)
		 	}

		}
		catch ANTLRException.recognition(let re) {
			_localctx.exception = re
			_errHandler.reportError(self, re)
			try _errHandler.recover(self, re)
		}

		return _localctx
	}

	public class VarDefContext: ParserRuleContext {
			open
			func type() -> TypeContext? {
				return getRuleContext(TypeContext.self, 0)
			}
			open
			func ID() -> TerminalNode? {
				return getToken(StatParser.Tokens.ID.rawValue, 0)
			}
		override open
		func getRuleIndex() -> Int {
			return StatParser.RULE_varDef
		}
		override open
		func accept<T>(_ visitor: ParseTreeVisitor<T>) -> T? {
			if let visitor = visitor as? StatVisitor {
			    return visitor.visitVarDef(self)
			}
			else if let visitor = visitor as? StatBaseVisitor {
			    return visitor.visitVarDef(self)
			}
			else {
			     return visitor.visitChildren(self)
			}
		}
	}
	@discardableResult
	 open func varDef() throws -> VarDefContext {
		var _localctx: VarDefContext
		_localctx = VarDefContext(_ctx, getState())
		try enterRule(_localctx, 10, StatParser.RULE_varDef)
		defer {
	    		try! exitRule()
	    }
		do {
		 	try enterOuterAlt(_localctx, 1)
		 	setState(65)
		 	try type()
		 	setState(66)
		 	try match(StatParser.Tokens.ID.rawValue)

		}
		catch ANTLRException.recognition(let re) {
			_localctx.exception = re
			_errHandler.reportError(self, re)
			try _errHandler.recover(self, re)
		}

		return _localctx
	}

	public class BlockContext: ParserRuleContext {
			open
			func LBRACES() -> TerminalNode? {
				return getToken(StatParser.Tokens.LBRACES.rawValue, 0)
			}
			open
			func RBRACES() -> TerminalNode? {
				return getToken(StatParser.Tokens.RBRACES.rawValue, 0)
			}
			open
			func statement() -> [StatementContext] {
				return getRuleContexts(StatementContext.self)
			}
			open
			func statement(_ i: Int) -> StatementContext? {
				return getRuleContext(StatementContext.self, i)
			}
			open
			func varDecl() -> [VarDeclContext] {
				return getRuleContexts(VarDeclContext.self)
			}
			open
			func varDecl(_ i: Int) -> VarDeclContext? {
				return getRuleContext(VarDeclContext.self, i)
			}
		override open
		func getRuleIndex() -> Int {
			return StatParser.RULE_block
		}
		override open
		func accept<T>(_ visitor: ParseTreeVisitor<T>) -> T? {
			if let visitor = visitor as? StatVisitor {
			    return visitor.visitBlock(self)
			}
			else if let visitor = visitor as? StatBaseVisitor {
			    return visitor.visitBlock(self)
			}
			else {
			     return visitor.visitChildren(self)
			}
		}
	}
	@discardableResult
	 open func block() throws -> BlockContext {
		var _localctx: BlockContext
		_localctx = BlockContext(_ctx, getState())
		try enterRule(_localctx, 12, StatParser.RULE_block)
		var _la: Int = 0
		defer {
	    		try! exitRule()
	    }
		do {
		 	try enterOuterAlt(_localctx, 1)
		 	setState(68)
		 	try match(StatParser.Tokens.LBRACES.rawValue)
		 	setState(73)
		 	try _errHandler.sync(self)
		 	_la = try _input.LA(1)
		 	while (//closure
		 	 { () -> Bool in
		 	      let testSet: Bool = {  () -> Bool in
		 	   let testArray: [Int] = [_la, StatParser.Tokens.LPAR.rawValue,StatParser.Tokens.CONST.rawValue,StatParser.Tokens.RETURN.rawValue,StatParser.Tokens.MINUS.rawValue,StatParser.Tokens.NOT.rawValue,StatParser.Tokens.TRUE.rawValue,StatParser.Tokens.FALSE.rawValue,StatParser.Tokens.BOOLEANTYPE.rawValue,StatParser.Tokens.NUMBERTYPE.rawValue,StatParser.Tokens.DEVICETYPE.rawValue,StatParser.Tokens.IF.rawValue,StatParser.Tokens.ID.rawValue,StatParser.Tokens.NUMBER.rawValue]
		 	    return  Utils.testBitLeftShiftArray(testArray, 0)
		 	}()
		 	      return testSet
		 	 }()) {
		 		setState(71)
		 		try _errHandler.sync(self)
		 		switch (StatParser.Tokens(rawValue: try _input.LA(1))!) {
		 		case .LPAR:fallthrough
		 		case .RETURN:fallthrough
		 		case .MINUS:fallthrough
		 		case .NOT:fallthrough
		 		case .TRUE:fallthrough
		 		case .FALSE:fallthrough
		 		case .IF:fallthrough
		 		case .ID:fallthrough
		 		case .NUMBER:
		 			setState(69)
		 			try statement()

		 			break
		 		case .CONST:fallthrough
		 		case .BOOLEANTYPE:fallthrough
		 		case .NUMBERTYPE:fallthrough
		 		case .DEVICETYPE:
		 			setState(70)
		 			try varDecl()

		 			break
		 		default:
		 			throw ANTLRException.recognition(e: NoViableAltException(self))
		 		}

		 		setState(75)
		 		try _errHandler.sync(self)
		 		_la = try _input.LA(1)
		 	}
		 	setState(76)
		 	try match(StatParser.Tokens.RBRACES.rawValue)

		}
		catch ANTLRException.recognition(let re) {
			_localctx.exception = re
			_errHandler.reportError(self, re)
			try _errHandler.recover(self, re)
		}

		return _localctx
	}

	public class StatementContext: ParserRuleContext {
		override open
		func getRuleIndex() -> Int {
			return StatParser.RULE_statement
		}
	}
	public class ExprStmtContext: StatementContext {
			open
			func exprD() -> ExprDContext? {
				return getRuleContext(ExprDContext.self, 0)
			}
			open
			func SEMICOLON() -> TerminalNode? {
				return getToken(StatParser.Tokens.SEMICOLON.rawValue, 0)
			}

		public
		init(_ ctx: StatementContext) {
			super.init()
			copyFrom(ctx)
		}
		override open
		func accept<T>(_ visitor: ParseTreeVisitor<T>) -> T? {
			if let visitor = visitor as? StatVisitor {
			    return visitor.visitExprStmt(self)
			}
			else if let visitor = visitor as? StatBaseVisitor {
			    return visitor.visitExprStmt(self)
			}
			else {
			     return visitor.visitChildren(self)
			}
		}
	}
	public class IfStmtContext: StatementContext {
			open
			func IF() -> TerminalNode? {
				return getToken(StatParser.Tokens.IF.rawValue, 0)
			}
			open
			func LPAR() -> TerminalNode? {
				return getToken(StatParser.Tokens.LPAR.rawValue, 0)
			}
			open
			func exprD() -> ExprDContext? {
				return getRuleContext(ExprDContext.self, 0)
			}
			open
			func RPAR() -> TerminalNode? {
				return getToken(StatParser.Tokens.RPAR.rawValue, 0)
			}
			open
			func block() -> BlockContext? {
				return getRuleContext(BlockContext.self, 0)
			}

		public
		init(_ ctx: StatementContext) {
			super.init()
			copyFrom(ctx)
		}
		override open
		func accept<T>(_ visitor: ParseTreeVisitor<T>) -> T? {
			if let visitor = visitor as? StatVisitor {
			    return visitor.visitIfStmt(self)
			}
			else if let visitor = visitor as? StatBaseVisitor {
			    return visitor.visitIfStmt(self)
			}
			else {
			     return visitor.visitChildren(self)
			}
		}
	}
	public class IfElseStmtContext: StatementContext {
			open
			func IF() -> TerminalNode? {
				return getToken(StatParser.Tokens.IF.rawValue, 0)
			}
			open
			func LPAR() -> TerminalNode? {
				return getToken(StatParser.Tokens.LPAR.rawValue, 0)
			}
			open
			func exprD() -> ExprDContext? {
				return getRuleContext(ExprDContext.self, 0)
			}
			open
			func RPAR() -> TerminalNode? {
				return getToken(StatParser.Tokens.RPAR.rawValue, 0)
			}
			open
			func block() -> [BlockContext] {
				return getRuleContexts(BlockContext.self)
			}
			open
			func block(_ i: Int) -> BlockContext? {
				return getRuleContext(BlockContext.self, i)
			}
			open
			func ELSE() -> TerminalNode? {
				return getToken(StatParser.Tokens.ELSE.rawValue, 0)
			}

		public
		init(_ ctx: StatementContext) {
			super.init()
			copyFrom(ctx)
		}
		override open
		func accept<T>(_ visitor: ParseTreeVisitor<T>) -> T? {
			if let visitor = visitor as? StatVisitor {
			    return visitor.visitIfElseStmt(self)
			}
			else if let visitor = visitor as? StatBaseVisitor {
			    return visitor.visitIfElseStmt(self)
			}
			else {
			     return visitor.visitChildren(self)
			}
		}
	}
	public class AssignStmtContext: StatementContext {
			open
			func exprG() -> ExprGContext? {
				return getRuleContext(ExprGContext.self, 0)
			}
			open
			func AFFECT() -> TerminalNode? {
				return getToken(StatParser.Tokens.AFFECT.rawValue, 0)
			}
			open
			func exprD() -> ExprDContext? {
				return getRuleContext(ExprDContext.self, 0)
			}
			open
			func SEMICOLON() -> TerminalNode? {
				return getToken(StatParser.Tokens.SEMICOLON.rawValue, 0)
			}

		public
		init(_ ctx: StatementContext) {
			super.init()
			copyFrom(ctx)
		}
		override open
		func accept<T>(_ visitor: ParseTreeVisitor<T>) -> T? {
			if let visitor = visitor as? StatVisitor {
			    return visitor.visitAssignStmt(self)
			}
			else if let visitor = visitor as? StatBaseVisitor {
			    return visitor.visitAssignStmt(self)
			}
			else {
			     return visitor.visitChildren(self)
			}
		}
	}
	public class ReturnStmtContext: StatementContext {
			open
			func RETURN() -> TerminalNode? {
				return getToken(StatParser.Tokens.RETURN.rawValue, 0)
			}
			open
			func exprD() -> ExprDContext? {
				return getRuleContext(ExprDContext.self, 0)
			}
			open
			func SEMICOLON() -> TerminalNode? {
				return getToken(StatParser.Tokens.SEMICOLON.rawValue, 0)
			}

		public
		init(_ ctx: StatementContext) {
			super.init()
			copyFrom(ctx)
		}
		override open
		func accept<T>(_ visitor: ParseTreeVisitor<T>) -> T? {
			if let visitor = visitor as? StatVisitor {
			    return visitor.visitReturnStmt(self)
			}
			else if let visitor = visitor as? StatBaseVisitor {
			    return visitor.visitReturnStmt(self)
			}
			else {
			     return visitor.visitChildren(self)
			}
		}
	}
	@discardableResult
	 open func statement() throws -> StatementContext {
		var _localctx: StatementContext
		_localctx = StatementContext(_ctx, getState())
		try enterRule(_localctx, 14, StatParser.RULE_statement)
		defer {
	    		try! exitRule()
	    }
		do {
		 	setState(104)
		 	try _errHandler.sync(self)
		 	switch(try getInterpreter().adaptivePredict(_input,9, _ctx)) {
		 	case 1:
		 		_localctx =  IfStmtContext(_localctx);
		 		try enterOuterAlt(_localctx, 1)
		 		setState(78)
		 		try match(StatParser.Tokens.IF.rawValue)
		 		setState(79)
		 		try match(StatParser.Tokens.LPAR.rawValue)
		 		setState(80)
		 		try exprD(0)
		 		setState(81)
		 		try match(StatParser.Tokens.RPAR.rawValue)
		 		setState(82)
		 		try block()

		 		break
		 	case 2:
		 		_localctx =  IfElseStmtContext(_localctx);
		 		try enterOuterAlt(_localctx, 2)
		 		setState(84)
		 		try match(StatParser.Tokens.IF.rawValue)
		 		setState(85)
		 		try match(StatParser.Tokens.LPAR.rawValue)
		 		setState(86)
		 		try exprD(0)
		 		setState(87)
		 		try match(StatParser.Tokens.RPAR.rawValue)
		 		setState(88)
		 		try block()
		 		setState(89)
		 		try match(StatParser.Tokens.ELSE.rawValue)
		 		setState(90)
		 		try block()

		 		break
		 	case 3:
		 		_localctx =  AssignStmtContext(_localctx);
		 		try enterOuterAlt(_localctx, 3)
		 		setState(92)
		 		try exprG()
		 		setState(93)
		 		try match(StatParser.Tokens.AFFECT.rawValue)
		 		setState(94)
		 		try exprD(0)
		 		setState(95)
		 		try match(StatParser.Tokens.SEMICOLON.rawValue)

		 		break
		 	case 4:
		 		_localctx =  ExprStmtContext(_localctx);
		 		try enterOuterAlt(_localctx, 4)
		 		setState(97)
		 		try exprD(0)
		 		setState(98)
		 		try match(StatParser.Tokens.SEMICOLON.rawValue)

		 		break
		 	case 5:
		 		_localctx =  ReturnStmtContext(_localctx);
		 		try enterOuterAlt(_localctx, 5)
		 		setState(100)
		 		try match(StatParser.Tokens.RETURN.rawValue)
		 		setState(101)
		 		try exprD(0)
		 		setState(102)
		 		try match(StatParser.Tokens.SEMICOLON.rawValue)

		 		break
		 	default: break
		 	}
		}
		catch ANTLRException.recognition(let re) {
			_localctx.exception = re
			_errHandler.reportError(self, re)
			try _errHandler.recover(self, re)
		}

		return _localctx
	}


	public class ExprDContext: ParserRuleContext {
		override open
		func getRuleIndex() -> Int {
			return StatParser.RULE_exprD
		}
	}
	public class ParensContext: ExprDContext {
			open
			func LPAR() -> TerminalNode? {
				return getToken(StatParser.Tokens.LPAR.rawValue, 0)
			}
			open
			func exprD() -> ExprDContext? {
				return getRuleContext(ExprDContext.self, 0)
			}
			open
			func RPAR() -> TerminalNode? {
				return getToken(StatParser.Tokens.RPAR.rawValue, 0)
			}

		public
		init(_ ctx: ExprDContext) {
			super.init()
			copyFrom(ctx)
		}
		override open
		func accept<T>(_ visitor: ParseTreeVisitor<T>) -> T? {
			if let visitor = visitor as? StatVisitor {
			    return visitor.visitParens(self)
			}
			else if let visitor = visitor as? StatBaseVisitor {
			    return visitor.visitParens(self)
			}
			else {
			     return visitor.visitChildren(self)
			}
		}
	}
	public class TrueExprContext: ExprDContext {
			open
			func TRUE() -> TerminalNode? {
				return getToken(StatParser.Tokens.TRUE.rawValue, 0)
			}

		public
		init(_ ctx: ExprDContext) {
			super.init()
			copyFrom(ctx)
		}
		override open
		func accept<T>(_ visitor: ParseTreeVisitor<T>) -> T? {
			if let visitor = visitor as? StatVisitor {
			    return visitor.visitTrueExpr(self)
			}
			else if let visitor = visitor as? StatBaseVisitor {
			    return visitor.visitTrueExpr(self)
			}
			else {
			     return visitor.visitChildren(self)
			}
		}
	}
	public class NumberExprContext: ExprDContext {
			open
			func NUMBER() -> TerminalNode? {
				return getToken(StatParser.Tokens.NUMBER.rawValue, 0)
			}
